[gd_scene load_steps=3 format=2]

[ext_resource path="res://Draggable.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1, 1 )

[node name="Draggable" type="Area2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
DragBoxSize = Vector2( 32, 32 )

[node name="DragBox" type="CollisionShape2D" parent="."]
scale = Vector2( 32, 32 )
shape = SubResource( 1 )
[connection signal="mouse_entered" from="." to="." method="_on_Draggable_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Draggable_mouse_exited"]
[connection signal="moved" from="." to="." method="_on_Draggable_moved" binds= [ Vector2( 0, 0 ) ]]
